<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_three">


    <TextView
        android:id="@+id/layout3_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout3_text1"
        android:textSize="@dimen/dp24"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"></TextView>

    <EditText
        android:id="@+id/layout3_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_form"
        android:hint="@string/layout3_text2"
        android:layout_below="@id/layout3_text1"
        android:layout_marginVertical="@dimen/dp14"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="@dimen/dp20"/>


    <TextView
        android:id="@+id/layout3_text3"
        android:layout_below="@id/layout3_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout3_text3"
        android:textSize="@dimen/dp24"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="@dimen/dp14"
        android:textColor="@color/black"></TextView>


    <EditText
        android:id="@+id/layout3_text4"
        android:layout_below="@id/layout3_text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_form"
        android:hint="@string/layout3_text4"
        android:layout_marginVertical="@dimen/dp14"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="@dimen/dp20"/>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button_yellow"
        android:text="@string/layout1_text2"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginVertical="40dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp26"
        android:onClick="layout3">

        <TextView
            android:id="@+id/layout3_text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout3_text5"
            android:textAlignment="center"
            android:textColor="@color/black_87"
            android:textSize="@dimen/dp18" />

    </LinearLayout>

</RelativeLayout>